--- a/Frontend Mentor Tasks (Frontend)/FAQ Accordion Card Hub/styles/style.css
+++ b/Frontend Mentor Tasks (Frontend)/FAQ Accordion Card Hub/styles/style.css
@@ -1,15 +1,18 @@
 body {
+  height: 100%;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
   font-family: 'Lexend Deca', sans-serif;
   font-weight: 400;
-  background: no-repeat
+  background:
     linear-gradient(
       to bottom,
       var(--background-color-1) 0%,
       var(--background-color-2) 75%
     );
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 a {
@@ -23,11 +26,6 @@ a {
   --font-color-standart: hsl(240, 6%, 50%);
   --font-color-special: hsl(237, 12%, 33%);
   --font-size-standart: 12px;
-}
-
-html,
-body {
-  height: 200vh;
 }
 
 h2 {
@@ -45,6 +43,9 @@ h2 {
   background-color: white;
   border-radius: 20px;
   box-shadow: 0px 20px 30px -15px hsla(0, 100%, 1%, 0.5);
+  background-image: url("https://raw.githubusercontent.com/NikitaDobrachev/Nikita-Dobrachev-Developer-Portfolio/7b5bb1ca7f6655e4f755d1ae83dbd4acbdb7eb88/Frontend%20Mentor%20Tasks%20(Frontend)/FAQ%20Accordion%20Card%20Hub/images/bg-pattern-desktop.svg");
+  background-repeat: no-repeat;
+  background-position: -578px -272px;
 }
 
 .widgetContent {
@@ -64,17 +65,11 @@ h2 {
 }
 
 #illustrationBox {
+  display: inline;
   position: relative;
   z-index: 2;
-  top: -1193px;
-  left: -130px;
-}
-
-#illustrationBackground {
-  position: relative;
-  z-index: 0;
-  top: -687px;
-  left: -620px;
+  top: -265px;
+  left: -125px;
 }
 
 .widget #faq {
@@ -86,28 +81,19 @@ h2 {
   grid-area: pictures;
 }
 
-.widget .hidecontent {
-  display: none;
-}
-
 .widget .content {
   margin-top: 12px;
   margin-bottom: 12px;
 }
 
-#accordionContent label {
+summary {
   margin-top: 12px;
   margin-bottom: 12px;
   color: var(--font-color-special);
   font-size: 15px;
 }
 
-.content-info input:checked + label + .content {
-  display: block;
-  transition: height 1s;
-}
-
-.content p {
+p {
   font-size: var(--font-size-standart);
   color: var(--font-color-standart);
 }
@@ -119,7 +105,8 @@ h2 {
   box-shadow: 0px 0.5px 0.5px -0.5px hsla(0, 100%, 1%, 0.1);
 }
 
-.content-info {
+summary {
+  list-style-type: none;
   display: flex;
 	justify-content: space-between;
 	align-items: center;
