--- a/NLW/style.css
+++ b/NLW/style.css
@@ -5,16 +5,25 @@
 }
 
 :root {
-  --primary-color: hsl(170, 100%, 26%);
+  --hue: 170;
+
+  --primary-color: hsl(var(--hue), 100%, 26%);
   --headline: hsl(210, 11%, 15%);
   --paragraph: hsl(210, 9%, 31%);
 
   --brand-beige: hsl(39, 100%, 97%);
-  --brand-light: hsl(148, 23%, 89%);
+  --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-dark: hsl(var(--hue), 100%, 14%);
+
+  --bg-light: hsl(180, 14%, 97%);
 
   font-size: 62.5%; /* 1rem = 10px */
 
   --nav-height: 7.2rem;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 html,
@@ -27,10 +36,23 @@ body {
   font-family: 'DM Sans', sans-serif;
   font-size: 1.6rem;
   text-align: center;
+
+  background: var(--bg-light);
 }
 
 ul {
   list-style: none;
+}
+
+.social-links {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 3.2rem;
+}
+
+section {
+  padding-block: 10rem;
 }
 
 .wrapper {
@@ -40,83 +62,47 @@ ul {
   padding-inline: 2.4rem;
 }
 
-/*=== NAVIGATION =======================+*/
-nav {
-  display: flex;
-
-  height: var(--nav-height);
-
-  position: fixed;
-  top: 0;
-  left: 50%;
-
-  transform: translateX(-50%);
-}
-
-nav.scroll {
-  background: var(--primary-color);
-  width: 100%;
-}
-
-nav .wrapper {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-nav.scroll .logo path {
-  fill: white;
-}
-
-nav.scroll button path {
-  stroke: white;
-}
-
-nav button {
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-/*=== HEADER ============================*/
-header {
-  margin-top: calc(4.1rem + var(--nav-height));
-}
-
-header::before {
-  content: '';
-  width: 100%;
-  height: calc(108rem + var(--nav-height));
-  background-color: var(--brand-light);
-  display: block;
-
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  z-index: -1;
-}
-
-header h1 {
-  font-size: 3.4rem;
-  color: var(--headline);
-  line-height: 130%;
-  margin-bottom: 2.4rem;
-}
-
-header h4 {
-  font-size: 1.4rem;
-  color: var(--primary-color);
+section header h4 {
   margin-bottom: 1.6rem;
-}
 
-header p {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   line-height: 150%;
-  color: var(--paragraph);
-  margin-bottom: 3.2rem;
+  letter-spacing: 0.08rem;
+
+  text-transform: uppercase;
+
+  color: var(--primary-color);
 }
 
-header button {
+section header h1 {
+  margin-bottom: 2.4rem;
+
+  font-size: 3.4rem;
+  line-height: 130%;
+
+  color: var(--headline);
+}
+
+section header h2 {
+  font-size: 3rem;
+  line-height: 3.9rem;
+
+  color: var(--headline);
+}
+
+section .content p {
+  font-weight: 400;
+  font-size: 1.6rem;
+  line-height: 150%;
+
+  color: var(--paragraph);
+}
+
+section img {
+  width: 100%;
+}
+
+section .button {
   background: var(--primary-color);
 
   border: none;
@@ -124,8 +110,8 @@ header button {
 
   margin: 0 auto 6rem;
 
-  height: 5.2rem;
-  width: 26.3rem;
+  padding: 1.6rem 3.2rem;
+  width: fit-content;
 
   color: white;
 
@@ -137,54 +123,75 @@ header button {
   align-items: center;
   justify-content: center;
   gap: 1.6rem;
+
+  text-decoration: none;
 }
 
-header img {
-  width: 26.4rem;
-  display: block;
-  margin-inline: auto;
+section .button:hover {
+  background: var(--brand-dark);
+  transition: background .2s;
 }
 
-.stats {
-  width: 32.7rem;
+/* custom colors */
+#services .card circle {
+  fill: var(--brand-light);
+}
 
-  padding-block: 4rem;
+button.open-menu path,
+#contact li path {
+  stroke: var(--primary-color);
+}
 
-  margin-inline: auto;
+#backToTopButton circle, 
+#navigation .logo path[fill*="#00856F"]{
+  fill: var(--primary-color);
+}
 
-  border: 1px solid var(--brand-light);
-  border-radius: 0.6rem;
+#navigation.scroll .logo path,
+#navigation.scroll button.open-menu path,
+body.menu-expanded #navigation .logo path {
+  fill: white;
+}
 
-  background: var(--brand-beige);
-
+nav.scroll button path {
+  stroke: white;
+}
+/*=== NAVIGATION =======================+*/
+nav {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 6rem;
+
+  height: var(--nav-height);
+
+  position: fixed;
+  top: 0;
+  width: 100vw;
+
+  z-index: 100;
 }
 
-.stat h3 {
-  color: var(--headline);
-  font-size: 4.8rem;
-  line-height: 130%;
-  margin-bottom: 0.4rem;
+nav.scroll {
+  background: var(--primary-color);
 }
 
-.stat p {
-  margin: 0;
+nav .wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
 
-  color: var(--primary-color);
-
-  line-height: 150%;
+nav button {
+  background: none;
+  border: none;
+  cursor: pointer;
 }
 
 /*=== MENU-EXPANDED =======================*/
 body.menu-expanded {
-  overflow: scroll;
+  overflow: overlay;
 }
 
 body.menu-expanded > :not(nav) {
-  display: none;
+  visibility: hidden;
 }
 
 .menu,
@@ -200,20 +207,25 @@ body.menu-expanded .close-menu {
   visibility: visible;
 }
 
+.menu {
+  transform: translateY(100%);
+}
+
 body.menu-expanded .menu {
   position: fixed;
   top: 0;
   left: 0;
   background: var(--primary-color);
 
-  width: 100%;
-  height: 87.3rem;
+  width: 100vw;
+  height: 100vh;
 
   padding-top: var(--nav-height);
-}
 
-body.menu-expanded nav {
-  position: relative;
+  transition: transform 300ms;
+  transform: translateY(0);
+
+  overflow: overlay;
 }
 
 .menu ul:nth-child(1) {
@@ -252,11 +264,13 @@ body.menu-expanded nav {
   margin-bottom: 8rem;
 }
 
-.social-links {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 3.2rem;
+.menu .button:hover {
+  background: var(--primary-color);
+  color: white;
+
+  filter: brightness(1.3);
+
+  transition: .2s;
 }
 
 body.menu-expanded .logo,
@@ -265,10 +279,191 @@ body.menu-expanded nav button {
   z-index: 10;
 }
 
-body.menu-expanded .logo path {
+/*=== HOME ============================*/
+#home {
+  padding-top: calc(4.1rem + var(--nav-height));
+}
+
+#home::before {
+  content: '';
+  width: 100%;
+  height: calc(108rem + var(--nav-height));
+  background-color: var(--brand-light);
+  display: block;
+
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  z-index: -1;
+}
+
+#home p {
+  font-size: 1.8rem;
+  margin-bottom: 3.2rem;
+}
+
+#home img {
+  width: 26.4rem;
+  display: block;
+  margin-inline: auto;
+}
+
+#home .stats {
+  width: 32.7rem;
+
+  padding-block: 4rem;
+
+  margin-inline: auto;
+
+  border: 1px solid var(--brand-light);
+  border-radius: 0.6rem;
+
+  background: var(--brand-beige);
+
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 6rem;
+}
+
+#home .stat h3 {
+  color: var(--headline);
+  font-size: 4.8rem;
+  line-height: 130%;
+  margin-bottom: 0.4rem;
+}
+
+#home .stat p {
+  margin: 0;
+
+  color: var(--primary-color);
+}
+
+/*=== SERVICES =======================*/
+#services header h2 {
+  font-size: 3rem;
+  line-height: 3.9rem;
+
+  margin-bottom: 6rem;
+}
+
+#services .cards {
+  display: flex;
+  flex-direction: column;
+  gap: 3.2rem;
+}
+
+#services .card {
+  padding: 2.4rem;
+  text-align: left;
+
+  background: white;
+
+  border: 1px solid var(--brand-light);
+  border-radius: 0.6rem;
+}
+
+#services .card h3 {
+  margin-block: 1.6rem;
+
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+
+  color: var(--headline);
+}
+
+#services .card circle {
+  fill: var(--brand-light);
+}
+/*=== ABOUT ==================================*/
+#about {
+  text-align: left;
+  background: var(--brand-beige);
+}
+
+#about header h2 {
+  margin-bottom: 2.4rem;
+}
+
+#about .content p {
+  margin-top: 2.4rem;
+  margin-bottom: 6rem;
+}
+
+/*=== CONTACT ==================================*/
+#contact {
+  text-align: left;
+}
+
+#contact ul {
+  margin-block: 3.2rem;
+}
+
+#contact ul li {
+  display: flex;
+  gap: 0.8rem;
+  align-items: center;
+
+  margin-bottom: 1.6rem;
+}
+
+#contact .button {
+  margin-inline: 0;
+}
+
+/*=== FOOTER ===================================*/
+footer {
+  background: var(--primary-color);
+  color: white;
+
+  padding-block: 6rem;
+
+  text-align: left;
+}
+
+footer .logo {
+  display: inline-block;
+  margin-bottom: 2.4rem;
+}
+
+footer .logo svg {
+  width: 23.6rem;
+  height: 3.1rem;
+}
+
+footer .logo path {
   fill: white;
 }
 
-body.menu-expanded button path {
-  stroke: white;
+footer p {
+  color: var(--brand-beige);
+
+  line-height: 2;
+
+  margin-bottom: 3.2rem;
+}
+
+footer .social-links {
+  justify-content: flex-start;
+}
+
+/* BACK TO TOP */
+#backToTopButton {
+  position: fixed;
+  bottom: 1rem;
+  right: 2.5rem;
+
+  opacity: 0;
+  visibility: hidden;
+
+  transform: translateY(100%);
+  transition: 200ms;
+}
+
+#backToTopButton.show {
+  opacity: 1;
+  visibility: visible;
+
+  transform: translateY(0);
 }
