--- a/NLW/style.css
+++ b/NLW/style.css
@@ -13,6 +13,7 @@
 
   --brand-beige: hsl(39, 100%, 97%);
   --brand-light: hsl(calc(var(--hue) - 22), 23%, 89%);
+  --brand-light-2: hsl(calc(var(--hue) + 10), 14%, 97%);
   --brand-dark: hsl(var(--hue), 100%, 14%);
 
   --bg-light: hsl(180, 14%, 97%);
@@ -56,7 +57,7 @@ section {
 }
 
 .wrapper {
-  width: 37.5rem;
+  width: min(50rem, 100%);
   margin-inline: auto;
 
   padding-inline: 2.4rem;
@@ -185,6 +186,11 @@ nav button {
   cursor: pointer;
 }
 
+nav .menu,
+nav .close-menu {
+  position: fixed;
+}
+
 /*=== MENU-EXPANDED =======================*/
 body.menu-expanded {
   overflow: overlay;
@@ -212,7 +218,6 @@ body.menu-expanded .close-menu {
 }
 
 body.menu-expanded .menu {
-  position: fixed;
   top: 0;
   left: 0;
   background: var(--primary-color);
@@ -281,13 +286,14 @@ body.menu-expanded nav button {
 
 /*=== HOME ============================*/
 #home {
+  padding-block: 0;
   padding-top: calc(4.1rem + var(--nav-height));
 }
 
 #home::before {
   content: '';
   width: 100%;
-  height: calc(108rem + var(--nav-height));
+  height: calc(76% + var(--nav-height));
   background-color: var(--brand-light);
   display: block;
 
@@ -310,7 +316,7 @@ body.menu-expanded nav button {
 }
 
 #home .stats {
-  width: 32.7rem;
+  width: 100%;
 
   padding-block: 4rem;
 
@@ -466,4 +472,268 @@ footer .social-links {
   visibility: visible;
 
   transform: translateY(0);
+}
+
+/*=== RESPONSIVE ==========================*/
+
+@media (min-width: 1024px) {
+
+  /*=== GERAL =============================*/
+
+  body {
+    overflow: auto;
+  }
+
+  .wrapper {
+    margin-inline: auto;
+    width: min(112rem, 100%);
+    display: grid;
+  }
+
+  .col-a {
+    grid-area: A;
+  }
+
+  .col-b {
+    grid-area: B;
+  }
+
+  section {
+    padding-block: 16rem;
+  }
+
+  section header h2 {
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+
+  /*=== NAVIGATION ========================*/
+
+  /* reset */
+
+  nav#navigation .wrapper * {
+    margin: 0;
+    padding: 0;
+    visibility: initial;
+    opacity: initial;
+    flex-direction: initial;
+    position: initial;
+    font-size: initial;
+    transform: initial;
+    color: initial;
+    background-color: initial;
+    font-weight: initial;
+    line-height: initial;
+    filter: initial;
+  }
+
+  nav#navigation .close-menu,
+  nav#navigation .open-menu,
+  nav#navigation .social-links {
+    display: none;
+  }
+
+  nav#navigation .menu {
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+  }
+
+  nav#navigation .menu ul:nth-child(1) {
+    display: flex;
+    gap: 3.2rem;
+  }
+
+  nav#navigation .menu ul li a {
+    line-height: 2.1rem;
+
+    color: var(--primary-color);
+    opacity: 0.7;
+  }
+
+  nav#navigation .menu a.button {
+    padding: 1rem 2.4rem;
+
+    border: 1px solid var(--primary-color);
+    border-radius: 4rem;
+
+    color: var(--primary-color);
+
+    font-weight: 700;
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+    text-transform: uppercase;
+  }
+
+  nav#navigation .menu a.button:hover {
+    background-color: var(--primary-color);
+    color: white;
+    border: none;
+
+  }
+
+  nav#navigation .menu ul li a:hover,
+  nav#navigation .menu li.scroll a:hover,
+  nav#navigation .menu li a.active {
+    transition: opacity .4s;
+    opacity: 1;
+    font-weight: 700;
+  }
+
+  nav#navigation .menu li a:after {
+    content: '';
+    width: 0%;
+    height: 2px;
+    background-color: var(--primary-color);
+    display: block;
+    position: relative;
+    bottom: -2.5rem;
+    left: -.5rem;
+  }
+
+  nav#navigation.scroll .menu li a:after {
+    background-color: white;
+  }
+
+  nav#navigation .menu li a:hover::after,
+  nav#navigation .menu li a.active::after {
+    padding-inline: .8rem;
+    width: 100%;
+    transition: width .2s;
+  }
+
+  nav#navigation.scroll .menu ul li a {
+    color: var(--brand-light-2);
+    opacity: 0.6;
+  }
+
+  nav#navigation.scroll .menu a.button {
+    border-color: white;
+    color: white;
+  }
+
+  nav#navigation.scroll .menu a.button:hover,
+  nav#navigation.scroll .menu a.button.active {
+    background-color: var(--primary-color);
+    filter: brightness(1.3);
+    border: none;
+    transition: background-color .4s;
+  }
+
+  /*=== HOME =====================*/
+  #home::before {
+    height: calc(208% - var(--nav-height));
+  }
+  
+  #home {
+    padding-top: var(--nav-height);
+  }
+
+  #home .wrapper {
+    grid-template-columns: min(60.5rem, 57%) 1fr;
+    grid-template-areas: 
+    'A B'
+    'C C';
+  }
+
+  #home .col-a {
+    text-align: left;
+    align-self: center;
+  }
+
+  #home h1 {
+    font-size: 5.2rem;
+  }
+
+  #home img {
+    width: 42rem;
+  }
+
+  #home .stats {
+  grid-area: C;
+  flex-direction: row;
+  padding: 6rem;
+  gap: 0;
+  }
+
+  #home .stats .stat {
+    flex: 1;
+  }
+
+  #home .stats .stat + .stat {
+    border-left: 1px solid var(--primary-color);
+  }
+
+  #home .button {
+    margin: 0;
+  }
+
+  /*=== SERVICES ===================*/
+
+  #services header h2 {
+    width: 47rem;
+    margin-inline: auto;
+    font-size: 4rem;
+    line-height: 5.2rem;
+  }
+
+  #services .cards {
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 4rem;
+  }
+
+  #services .card {
+    width: 30%;
+  }
+
+  /*=== ABOUT ===================*/
+  #about .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'B A';
+    gap: 6.7rem;
+  }
+
+  #about .col-a {
+    align-self: center;
+  }
+
+  #about .content p {
+    margin-bottom: 0;
+  }
+
+  /*=== CONTACT =======================*/
+  #contact .wrapper {
+    grid-template-columns: 1fr 57.5rem;
+    grid-template-areas: 'A B';
+  }
+
+  #contact h2 {
+    width: 40.4rem;
+  }
+
+  /*=== FOOTER ========================*/
+  footer {
+    padding-block: 8rem;
+  }
+
+  footer .wrapper {
+    grid-template-columns: 1fr 1fr;
+    grid-template-areas: 'A B'
+  }
+
+  footer .col-a {
+    align-self: center;
+  }
+
+  footer p {
+    margin-bottom: 0;
+  }
+
+  footer .col-b {
+    align-self: center;
+    justify-self: end;
+  }
+
 }
